# billing-rest-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_default_data.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: __init__.py  admin.py  auth.py  users.py  webhooks.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  account.py  base.py  payment.py  user.py
app/schemas/: account.py  auth.py  payment.py  types.py  user.py  webhook.py
app/services/: payments.py
scripts/: wait_for_db.py
tests/: conftest.py
tests/integration/: conftest.py  test_admin_routes.py  test_auth_and_user_routes.py  test_webhooks.py
tests/unit/: test_security.py
